@@ -32,6 +32,7 @@ Build system
 Fixed bugs
 ----------
 - Propagation: avoid numerical difficulties
+- ParallelColDetection: avoid segfault by handling already fixed variables separately during sorting
 
 
 @section RN212 PaPILO 2.2.0
